--- a/translations/messages+intl-icu.fr.xlf
+++ b/translations/messages+intl-icu.fr.xlf
@@ -301,6 +301,10 @@
         <source>update.avatar.msg.error_3</source>
         <target>Token invalide. Merci de réessayer.</target>
       </trans-unit>
+      <trans-unit id="update.avatar.msg.error_4">
+        <source>update.avatar.msg.error_4</source>
+        <target>La taille de votre fichier dépasse la limite autorisée ({maxFileSize}).</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
