add entities for interests and fixtures associated

--- a/translations/messages+intl-icu.en.xlf
+++ b/translations/messages+intl-icu.en.xlf
@@ -305,6 +305,22 @@
         <source>update.avatar.msg.error_4</source>
         <target>Your file size exceeds the limit ({maxFileSize}).</target>
       </trans-unit>
+      <trans-unit id="interest.type_culture">
+        <source>interest.type_culture</source>
+        <target>Culture</target>
+      </trans-unit>
+      <trans-unit id="interest.type_science_business">
+        <source>interest.type_science_business</source>
+        <target>Science and Business</target>
+      </trans-unit>
+      <trans-unit id="interest.type_leisure">
+        <source>interest.type_leisure</source>
+        <target>Leisure</target>
+      </trans-unit>
+      <trans-unit id="interest.type_meet">
+        <source>interest.type_meet</source>
+        <target>Meet</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
