--- a/translations/messages+intl-icu.en.xlf
+++ b/translations/messages+intl-icu.en.xlf
@@ -225,8 +225,8 @@
         <source>profile.btn_register</source>
         <target>Register</target>
       </trans-unit>
-      <trans-unit id="profile.text_register">
-        <source>profile.text_register</source>
+      <trans-unit id="profile.text_unregister">
+        <source>profile.text_unregister</source>
         <target>You have not subscribed to any subscription.</target>
       </trans-unit>
       <trans-unit id="profile.title_dashboard">
@@ -444,6 +444,22 @@
       <trans-unit id="subscription.type_permanent">
         <source>subscription.type_permanent</source>
         <target>Permanent</target>
+      </trans-unit>
+      <trans-unit id="description.subscription.1_v">
+        <source>description.subscription.1_v</source>
+        <target>You have subscribed to an</target>
+      </trans-unit>
+      <trans-unit id="description.subscription.1_c">
+        <source>description.subscription.1_c</source>
+        <target>You have subscribed to a</target>
+      </trans-unit>
+      <trans-unit id="description.subscription.2">
+        <source>description.subscription.2</source>
+        <target>subscription which expires on</target>
+      </trans-unit>
+      <trans-unit id="days.left">
+        <source>days.left</source>
+        <target>day(s) left</target>
       </trans-unit>
     </body>
   </file>
