--- a/translations/messages+intl-icu.fr.xlf
+++ b/translations/messages+intl-icu.fr.xlf
@@ -501,6 +501,26 @@
         <source>profile.btn_renew_register</source>
         <target>Renouveler votre abonnement</target>
       </trans-unit>
+      <trans-unit id="search.result">
+        <source>search.result</source>
+        <target>{count, plural, =0 {aucun résultat} =1 {1 résultat} other {# résultats}}</target>
+      </trans-unit>
+      <trans-unit id="search.advanced">
+        <source>search.advanced</source>
+        <target>Recherche avancée</target>
+      </trans-unit>
+      <trans-unit id="generic.you">
+        <source>generic.you</source>
+        <target>Vous</target>
+      </trans-unit>
+      <trans-unit id="generic.at">
+        <source>generic.at</source>
+        <target>chez</target>
+      </trans-unit>
+      <trans-unit id="generic.connect">
+        <source>generic.connect</source>
+        <target>Se connecter</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
