--- a/translations/messages+intl-icu.en.xlf
+++ b/translations/messages+intl-icu.en.xlf
@@ -13,6 +13,14 @@
         <source>home.title</source>
         <target>Welcome to HappyBizTrip</target>
       </trans-unit>
+      <trans-unit id="search.block_title">
+        <source>search.block_title</source>
+        <target>Search</target>
+      </trans-unit>
+      <trans-unit id="visit.block_title">
+        <source>visit.block_title</source>
+        <target>New visits</target>
+      </trans-unit>
       <trans-unit id="home.subtitle">
         <source>home.subtitle</source>
         <target>Make your trip a fun...</target>
