--- a/translations/messages+intl-icu.en.xlf
+++ b/translations/messages+intl-icu.en.xlf
@@ -285,6 +285,10 @@
         <source>profile.title.interests</source>
         <target>Interests</target>
       </trans-unit>
+      <trans-unit id="profile.title.articles">
+        <source>profile.title.articles</source>
+        <target>Last articles</target>
+      </trans-unit>
       <trans-unit id="update.profile.successfull">
         <source>update.profile.successfull</source>
         <target>Your profile has been updated successfully</target>
@@ -516,6 +520,10 @@
       <trans-unit id="search.advanced">
         <source>search.advanced</source>
         <target>Advanced search</target>
+      </trans-unit>
+      <trans-unit id="visit.result">
+        <source>visit.result</source>
+        <target>{count, plural, =0 {aucun résultat} =1 {1 person viewed your profile} other {# people have viewed your profile}}</target>
       </trans-unit>
       <trans-unit id="generic.you">
         <source>generic.you</source>
