--- a/translations/messages+intl-icu.fr.xlf
+++ b/translations/messages+intl-icu.fr.xlf
@@ -285,6 +285,10 @@
         <source>profile.title.interests</source>
         <target>Intérêts</target>
       </trans-unit>
+      <trans-unit id="profile.title.articles">
+        <source>profile.title.articles</source>
+        <target>Derniers articles</target>
+      </trans-unit>
       <trans-unit id="update.profile.successfull">
         <source>update.profile.successfull</source>
         <target>Votre profil a été mis à jour avec succès</target>
@@ -516,6 +520,10 @@
       <trans-unit id="search.advanced">
         <source>search.advanced</source>
         <target>Recherche avancée</target>
+      </trans-unit>
+      <trans-unit id="visit.result">
+        <source>visit.result</source>
+        <target>{count, plural, =0 {aucun résultat} =1 {1 personne a consulté votre profil} other {# personnes ont consulté votre profil}}</target>
       </trans-unit>
       <trans-unit id="generic.you">
         <source>generic.you</source>
