--- a/translations/messages+intl-icu.en.xlf
+++ b/translations/messages+intl-icu.en.xlf
@@ -21,6 +21,10 @@
         <source>visit.block_title</source>
         <target>New visits</target>
       </trans-unit>
+      <trans-unit id="friend.block_title">
+        <source>friend.block_title</source>
+        <target>HappyBizFriends</target>
+      </trans-unit>
       <trans-unit id="home.subtitle">
         <source>home.subtitle</source>
         <target>Make your trip a fun...</target>
@@ -525,6 +529,10 @@
         <source>visit.result</source>
         <target>{count, plural, =0 {aucun résultat} =1 {1 person viewed your profile} other {# people have viewed your profile}}</target>
       </trans-unit>
+      <trans-unit id="friend.result">
+        <source>friend.result</source>
+        <target>{count, plural, =0 {aucun résultat} =1 {My HappyBizFriend} other {My HappyBizFriends (#)}}</target>
+      </trans-unit>
       <trans-unit id="generic.you">
         <source>generic.you</source>
         <target>You</target>
@@ -536,6 +544,10 @@
       <trans-unit id="generic.connect">
         <source>generic.connect</source>
         <target>Connect to</target>
+      </trans-unit>
+      <trans-unit id="generic.message">
+        <source>generic.message</source>
+        <target>Message</target>
       </trans-unit>
     </body>
   </file>
