--- a/translations/messages+intl-icu.fr.xlf
+++ b/translations/messages+intl-icu.fr.xlf
@@ -21,6 +21,10 @@
         <source>visit.block_title</source>
         <target>Nouvelles visites</target>
       </trans-unit>
+      <trans-unit id="friend.block_title">
+        <source>friend.block_title</source>
+        <target>HappyBizFriends</target>
+      </trans-unit>
       <trans-unit id="home.subtitle">
         <source>home.subtitle</source>
         <target>Prenez plaisir à vous déplacer</target>
@@ -525,6 +529,10 @@
         <source>visit.result</source>
         <target>{count, plural, =0 {aucun résultat} =1 {1 personne a consulté votre profil} other {# personnes ont consulté votre profil}}</target>
       </trans-unit>
+      <trans-unit id="friend.result">
+        <source>friend.result</source>
+        <target>{count, plural, =0 {aucun résultat} =1 {Mon HappyBizFriend} other {Mes HappyBizFriends (#)}}</target>
+      </trans-unit>
       <trans-unit id="generic.you">
         <source>generic.you</source>
         <target>Vous</target>
@@ -536,6 +544,10 @@
       <trans-unit id="generic.connect">
         <source>generic.connect</source>
         <target>Se connecter</target>
+      </trans-unit>
+      <trans-unit id="generic.message">
+        <source>generic.message</source>
+        <target>Message</target>
       </trans-unit>
     </body>
   </file>
