--- a/translations/messages+intl-icu.en.xlf
+++ b/translations/messages+intl-icu.en.xlf
@@ -545,6 +545,14 @@
         <source>generic.connect</source>
         <target>Connect to</target>
       </trans-unit>
+      <trans-unit id="generic.cancel">
+        <source>generic.cancel</source>
+        <target>Cencel</target>
+      </trans-unit>
+       <trans-unit id="generic.accept">
+        <source>generic.accept</source>
+        <target>Accept</target>
+      </trans-unit>
       <trans-unit id="generic.message">
         <source>generic.message</source>
         <target>Message</target>
