--- a/translations/messages+intl-icu.fr.xlf
+++ b/translations/messages+intl-icu.fr.xlf
@@ -557,6 +557,10 @@
         <source>generic.message</source>
         <target>Message</target>
       </trans-unit>
+      <trans-unit id="generic.block">
+        <source>generic.block</source>
+        <target>Bloquer</target>
+      </trans-unit>
       <trans-unit id="connection.requested">
         <source>connection.requested</source>
         <target>Connexion demandée</target>
@@ -564,6 +568,14 @@
       <trans-unit id="requested.you">
         <source>requested.you</source>
         <target>Vous a sollicité</target>
+      </trans-unit>
+      <trans-unit id="delete.relation">
+        <source>delete.relation</source>
+        <target>Supprimer la relation</target>
+      </trans-unit>
+      <trans-unit id="refuse.relation">
+        <source>refuse.relation</source>
+        <target>Refuser la relation</target>
       </trans-unit>
     </body>
   </file>
